# data

./: .env.template  README.md  Zoom.json  android_bulletins.json  android_bulletins_parser.py  extract_sig.cpp  get.py  get_json.py  json.py  microsoft_365_roadmap.json  microsoft_3rdpartysource.py  microsoft_azure_ai_benchmarks.json  microsoft_azure_ai_playground.json  microsoft_azure_endpoints.json  microsoft_defender_lua_sig_parser_decompile.py  microsoft_defender_signatures.ps1  microsoft_delivery_geo_int.json  microsoft_delivery_kv_int.json  microsoft_delivery_kv_prod.json  microsoft_download_center.py  microsoft_endpoints.json  microsoft_endpoints_intune.json  microsoft_gov_toolbox.json  microsoft_instance_discovery.json  microsoft_jwks.json  microsoft_jwks_cn.json  microsoft_jwks_ppe.json  microsoft_jwks_us.json  microsoft_office_serverconfig16.json  microsoft_oidc_config.json  microsoft_oidc_config_ppe.json  microsoft_style_guide.json  microsoft_vscode_marketplace.json  network_config_tf2.json  powershell_gallery.py  powershell_gallery_db.py  requirements.txt  tokens  uupdump.py  vs-emulator-android-kernelconfig64-analysis.md
Microsoft Intune Management Extension/: AgentExecutor.exe.config  BootstrapperAgentEtwProviderSchema.man  ClientCertCheck.exe.config  ClientHealthEval.exe.config  HealthCheck.xml  ImeUI.exe.config  IntuneWindowsAgent.cat  Microsoft.Management.Deployment.InProc.dll.manifest  Microsoft.Management.Deployment.winmd  Microsoft.Management.Services.IntuneWindowsAgent.exe.config  SideCarETWSchema.man
archive/: cert-oids.csv  cipolicy.xsd  eststoken.schema.json
ecs/: AuthClientAndroid.json  CHILL.json  CMD_prod.json  CMD_sh.json  CMD_test.json  Designer.json  Edge.json  EdgeUpdate.json  Intune.json  OneShell.json  (+10 more)
msedge/src/chrome/browser/importer/: BUILD_edge.gni
msedge/src/tools/win/DebugVisualizers/: BUILD_edge.gni  microsoftedge.natstepfilter  microsoftedge.natvis
msedge/src/tools/win/msedgede/: BUILD.gn  MSOWNERS  msedgede.cc  msedgede.def  msedgede_command.cc  msedgede_command.h
msedge/src/tools/win/msedgede/commands/: DEPS  crash_info_command.cc  crash_info_command.h  gwp_asan_command.cc  gwp_asan_command.h  hwnd_command.cc  hwnd_command.h
msedge/src/tools/win/process_viewer/: BUILD.gn  DEPS  MSOWNERS  README.md
msedge/src/tools/win/process_viewer/EdgeProcessViewer/: .gitignore  EdgeProcessViewer.sln
msedge/src/tools/win/process_viewer/EdgeProcessViewer/EdgeProcessViewer/: App.config  EdgeProcessViewer.csproj  EdgeProcessViewer.manifest  MainForm.Designer.cs  MainForm.cs  MainForm.resx  NativeMethods.cs  Program.cs  Utility.cs
msedge/src/tools/win/process_viewer/EdgeProcessViewer/EdgeProcessViewer/Controls/: ColumnDefinition.cs  ColumnSettingList.cs  CommandLineArg.cs  CommandLineArgGridView.cs  EdgeCommandLineWatcher.cs  EdgeGridView.cs  EdgeSessionTypeControl.cs  TaskGridView.cs
msedge/src/tools/win/process_viewer/EdgeProcessViewer/EdgeProcessViewer/Dialogs/: EditCommandLineArgWatcherDialog.cs  EditCommandLineArgWatcherDialog.designer.cs  EndProcessDialog.Designer.cs  EndProcessDialog.cs  EndProcessDialog.resx  LaunchEdgeDialog.Designer.cs  LaunchEdgeDialog.cs  LaunchEdgeDialog.resx  SetDebuggerDialog.cs  SetDebuggerDialog.designer.cs
msedge/src/tools/win/process_viewer/EdgeProcessViewer/EdgeProcessViewer/Model/: ChildItem.cs  DebugSettings.cs  EdgeTaskManagerClient.cs  EdgeWatcherClient.cs  IEChildItemProvider.cs  ProcessDataProvider.cs
msedge/src/tools/win/process_viewer/EdgeProcessViewer/EdgeProcessViewer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
msedge/src/tools/win/process_viewer/EdgeProcessViewer/EdgeProcessViewer/ViewModel/: DisplayStrings.cs  EdgeTaskList.cs  MainFormViewModel.cs  MainFormViewModelErrorEventArgs.cs  NewTaskEventArgs.cs  RequestEndProcessEventArgs.cs  RequestLaunchEdgeEventArgs.cs  RequestSetDebuggerPathEventArgs.cs  Task.cs  WatchedArgumentsChangedEventArgs.cs
msedge/src/tools/win/process_viewer/common/: MSOWNERS  edge_watcher.mojom  edge_watcher_common.h
msedge/src/tools/win/process_viewer/data_provider/: DEPS  edge_process.cc  edge_process.h  edge_process_constants.cc  edge_process_constants.h  edge_process_constants_unittest.cc  edge_watcher_client.cc  edge_watcher_client.h  edge_watcher_client_export.cc  edge_webview_process.cc  edge_webview_process.h  ie_process.cc  ie_process.h  ie_task_provider.cc  ie_task_provider.h  ie_task_provider_export.cc  main_export.cc  ntdefs.h  process.cc  process.h  process_data_provider.cc  process_data_provider.h  process_data_provider_export.cc  server_connection.cc  server_connection.h  task_export.cc  task_export.h  task_manager_client.cc  task_manager_client.h  task_manager_client_export.cc  task_manager_client_sync.cc  task_manager_client_sync.h
msedge/src/tools/win/process_viewer/edge_data_provider/: DEPS  edge_process.cc  edge_process.h  edge_process_constants.cc  edge_process_constants.h  edge_process_constants_unittest.cc  edge_watcher_client.cc  edge_watcher_client.h  edge_watcher_client_export.cc  edge_webview_process.cc  edge_webview_process.h  ie_process.cc  ie_process.h  ie_task_provider.cc  ie_task_provider.h  ie_task_provider_export.cc  ipc_thread.cc  ipc_thread.h  ipc_thread_unittest.cc  main_export.cc  ntdefs.h  process.cc  process.h  process_data_provider.cc  process_data_provider.h  process_data_provider_export.cc  task_export.cc  task_export.h  task_manager_client.cc  task_manager_client.h  task_manager_client_export.cc  task_manager_client_sync.cc  task_manager_client_sync.h
msedge/src/tools/win/process_viewer/edge_process_list/: main.cc
msedge/src/tools/win/process_viewer/edge_process_watcher/: browser_creation_watcher.cc  browser_creation_watcher.h  edge_watcher.cc  edge_watcher.h  edge_watcher_server.cc  edge_watcher_server.h  main.cc
msedge/src/tools/win/process_viewer/installer/: EdgeProcessViewerSetup.sln  EdgeProcessViewerSetup.wixproj  Product.wxs
msedge/src/tools/win/process_viewer/test/: run_all_unittests.cc
mselectron/src/microsoft/buildflags/: BUILD.gn  buildflags.gni
(+220618 files in other folders)
